[metadata]
name = km3io
description = "KM3NeT I/O library without ROOT"
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://git.km3net.de/km3py/km3io
author = "Tamas Gal and Zineb Aly"
author_email = tgal@km3net.de
maintainer = Tamas Gal
maintainer_email = tgal@km3net.de
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
keywords =
    neutrino
    astroparticle
    physics
    HEP
    root

[options]
packages = find:
install_requires =
    docopt
    numba>=0.50
    awkward>=2
    numpy>=2
    uproot>=5
    setuptools_scm
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
all =
dev =
    black>=22.3.0
    km3net-testdata>=0.3.6
    ipykernel
    matplotlib
    memory_profiler
    numpydoc
    pillow
    pytest
    pytest-cov
    pytest-flake8
    pylint
    pytest-watch
    scipy
    sphinx
    sphinx-autoapi
    sphinx-gallery
    sphinx_rtd_theme
    sphinxcontrib-versioning
    wheel

[options.package_data]
* = *.mplstyle, *.py.typed

[bdist_wheel]
universal = 1

[tool:pytest]
junit_family = xunit2
addopts = -vv -rs -Wd
testpaths =
    tests

[check-manifest]
ignore =
    src/km3pipe/version.py

[tool:isort]
profile = black
multi_line_output = 3
